--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,12 @@ jobs:
             <servers>
                 <server>
                     <id>github</id>
-                    <username>${{ GITHUB_ACTOR }}</username>
-                    <password>${{ GITHUB_TOKEN }}</password>
+                    <username>$GITHUB_ACTOR</username>
+                    <password>$GITHUB_TOKEN</password>
                 </server>
             </servers>
         </settings>
         EOF
+        cat .mvnsettings
     - name: deploy
-      run: mvn -s .mvnsettings -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/${{ GITHUB_REPOSITORY}} deploy
+      run: mvn -s .mvnsettings -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/$GITHUB_REPOSITORY deploy
