--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
                 <server>
                     <id>github</id>
                     <username>$GITHUB_ACTOR</username>
-                    <password>$GITHUB_TOKEN</password>
+                    <password>${{ secrets.GITHUB_TOKEN }}</password>
                 </server>
             </servers>
         </settings>
